fixed responsive card alignments

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,5 +4,8 @@
   flex-wrap: wrap;
   gap: 30px;
   margin: 15px;
-  width: 100%;
+
+  @media (max-width: 900px) {
+    justify-content: center;
+  }
 }
