--- a/src/Card/Card.scss
+++ b/src/Card/Card.scss
@@ -4,6 +4,14 @@
   border-radius: 5px;
   border: 1px solid lightgray;
 
+  @media (min-width: 950px) and (max-width: 1030px) {
+    width: 310px;
+  }
+
+  @media (min-width: 900px) and (max-width: 950px) {
+    width: 272px;
+  }
+
   .cardProfile,
   .cardInfo,
   .cardIcons {
